# django-clamav

./: Dockerfile  README.md  pyproject.toml  setup.py
src/django_clamav/: conf.py  validators.py
